# OfficeReader-MCP

./: .gitignore  CHANGES_SUMMARY.md  CONFIG.md  LICENSE  MANIFEST.in  QUICKSTART.md  README-CN.md  README.md  config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_config.py
.claude/: mcp-settings.json  settings.json  settings.local.json
RunDemo/: Of-Run.bat  Of-Run.sh  README.md
src/officereader_mcp/: __init__.py  config_loader.py  converter.py  excel_converter.py  image_optimizer.py  pptx_converter.py  server.py
test/: README.md  test_all_formats.py  test_converter.py
